--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.19.1",
-    "body-parser": "^1.19.0",
+    "bcryptjs": "^2.4.3",
     "concurrently": "^5.0.2",
+    "config": "^3.2.5",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.3.3",
     "mongoose": "^5.8.2",
     "package.json": "^2.0.1",
